# surgical-instrument-count

./: .gitignore  README.md  demo_mask2former.py  demo_sam3.py  main.py  pyproject.toml  run_notebook.sh  runme-rdp.sh  runme.bat  runme.sh  test.py
notebook/: 01-sam3.ipynb  02-mask2former.ipynb
